--- a/src/pages/book-detail/book-detail.html
+++ b/src/pages/book-detail/book-detail.html
@@ -31,9 +31,13 @@
             <ion-input type="text"> </ion-input>
         </ion-item>
         <ion-item>
-            <ion-label staked>Publisher</ion-label>
+            <ion-label stacked>Publisher</ion-label>
             <ion-input type="text"> </ion-input>
         </ion-item>
     </form>
+
+    <ion-fab bottom right edge>
+        <button ion-fab color="secondary"><ion-icon name="ion-plus-circled"></ion-icon></button>
+    </ion-fab>
 
 </ion-content>
