--- a/src/pages/book-list/book-list.html
+++ b/src/pages/book-list/book-list.html
@@ -13,9 +13,10 @@
       <ion-spinner></ion-spinner>
     </div>
     <ion-list>
-      <ion-item *ngFor="let book of books" (click)="showDetails(fruit)">
+      <ion-item *ngFor="let book of books" (click)="showDetails(book)">
         <p><b>{{ book.title }}</b></p>
         <p>{{ book.publisher }}</p>
       </ion-item>
     </ion-list>
+    
   </ion-content>
