--- a/src/pages/book-detail/book-detail.html
+++ b/src/pages/book-detail/book-detail.html
@@ -31,7 +31,7 @@
             <ion-input type="text"> </ion-input>
         </ion-item>
         <ion-item>
-            <ion-label staked>Publisher</ion-label>
+            <ion-label stacked>Publisher</ion-label>
             <ion-input type="text"> </ion-input>
         </ion-item>
     </form>
