--- a/src/pages/book-detail/book-detail.html
+++ b/src/pages/book-detail/book-detail.html
@@ -20,9 +20,9 @@
         <ion-item>
             <ion-label stacked>Language</ion-label>
             <ion-select formControlName="language">
-                <ion-option value="java">Java</ion-option>
-                <ion-option value="javascript">Javascript</ion-option>
-                <ion-option value="c">C++</ion-option>
+                <ion-option value="Java">Java</ion-option>
+                <ion-option value="Javascript">Javascript</ion-option>
+                <ion-option value="C++">C++</ion-option>
             </ion-select>
         </ion-item>
 
