--- a/src/pages/book-list/book-list.html
+++ b/src/pages/book-list/book-list.html
@@ -18,5 +18,9 @@
         <p>{{ book.publisher }}</p>
       </ion-item>
     </ion-list>
+
+    <ion-fab right bottom>
+      <button ion-fab color="secondary" (click)="addBook();"><ion-icon name="add"></ion-icon></button>
+    </ion-fab>
     
   </ion-content>
