--- a/src/pages/book-detail/book-detail.html
+++ b/src/pages/book-detail/book-detail.html
@@ -2,7 +2,7 @@
 
     <ion-navbar>
         <ion-title><span>
-                <!-- {{ 'detailrecommendation.Title' | translate}} -->
+                {{ book.title}}
             </span></ion-title>
     </ion-navbar>
 
@@ -10,7 +10,7 @@
 
 
 <ion-content padding>
-    <form [formGroup]="form" (submit)="formBookDetailSubmitted()">
+    <form [formGroup]="form">
 
         <ion-item>
             <ion-label stacked>Title</ion-label>
@@ -36,8 +36,18 @@
         </ion-item>
     </form>
 
-    <ion-fab bottom right edge>
-        <button ion-fab color="secondary"><ion-icon name="ion-plus-circled"></ion-icon></button>
+    <ion-fab bottom right>
+        <ion-row>
+            <ion-col>
+                <button ion-fab color="danger" [disabled]= "isSubmitting">
+                    <ion-icon name="trash"></ion-icon>
+                </button>
+            </ion-col>
+            <ion-col>
+                <button ion-fab color="secondary" (click)="formBookDetailSubmitted()" [disabled]= "isSubmitting">
+                    <ion-icon name="checkmark"></ion-icon>
+                </button>
+            </ion-col>
+        </ion-row>
     </ion-fab>
-
 </ion-content>
