--- a/src/pages/book-detail/book-detail.html
+++ b/src/pages/book-detail/book-detail.html
@@ -39,7 +39,7 @@
     <ion-fab bottom right>
         <ion-row>
             <ion-col>
-                <button ion-fab color="danger" [disabled]= "isSubmitting">
+                <button ion-fab color="danger" (click)="deleteBook()" [disabled]= "isSubmitting">
                     <ion-icon name="trash"></ion-icon>
                 </button>
             </ion-col>
