--- a/src/pages/new-book/new-book.html
+++ b/src/pages/new-book/new-book.html
@@ -43,7 +43,7 @@
                 <button ion-fab color="danger" (click)="deleteBook();" *ngIf="bookAdded"><ion-icon name="trash"></ion-icon></button>
             </ion-col>
             <ion-col>
-                <button ion-fab color="primary" (click)="addBookSubmmited();" ><ion-icon name="checkmark"></ion-icon></button>
+                <button ion-fab color="primary" (click)="addBookSubmmited();" [disabled]="isLoading"><ion-icon name="checkmark"></ion-icon></button>
             </ion-col>
         </ion-row>
         
