FAB color changed

--- a/src/pages/book-detail/book-detail.html
+++ b/src/pages/book-detail/book-detail.html
@@ -44,7 +44,7 @@
                 </button>
             </ion-col>
             <ion-col>
-                <button ion-fab color="secondary" (click)="formBookDetailSubmitted()" [disabled]= "isSubmitting">
+                <button ion-fab color="primary" (click)="formBookDetailSubmitted()" [disabled]= "isSubmitting">
                     <ion-icon name="checkmark"></ion-icon>
                 </button>
             </ion-col>
